# jqsh

./: Cargo.toml
cli/: main.rs
src/: builtin.rs  lib.rs  util.rs
src/lang/: channel.rs  context.rs  filter.rs  mod.rs  parser.rs
src/lang/value/: array.rs  mod.rs  object.rs
