[package]
name = "jqsh"
version = "0.0.1"
authors = [
    "madmalik <matthias.tellen@gmail.com>",
    "Fenhl <fenhl@fenhl.net>"
]
edition = "2018"

[[bin]]
name = "jqsh"
path = "cli/main.rs"
doc = false
test = false
bench = false

[lib]
name = "jqsh"
path = "src/lib.rs"

[dependencies]
chan = "*"
eventual = "*"
#itertools = "*"
num = "*"

[dependencies.itertools]
git = "https://github.com/fenhl/itertools"
branch = "multipeek-method"

[dependencies.readline]
git = "https://github.com/shaleh/rust-readline"

[dependencies.unicode]
git = "https://github.com/fenhl/rust-unicode"
